src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/MESAFramebufferFlipY_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/MESAFramebufferFlipY_StringErrorContext.class */
public final class MESAFramebufferFlipY_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glFramebufferParameteriMESA(III)V", "net/labymod/core/laby3d/opengl/error/generated/MESAFramebufferFlipYErrorContext");
        methods.put("nglGetFramebufferParameterivMESA(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/MESAFramebufferFlipYErrorContext");
        methods.put("glGetFramebufferParameterivMESA(IILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/MESAFramebufferFlipYErrorContext");
        methods.put("glGetFramebufferParameterivMESA(II[I)V", "net/labymod/core/laby3d/opengl/error/generated/MESAFramebufferFlipYErrorContext");
        return methods;
    }
}
